[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.219608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -55.0
margin_right = 75.0
margin_bottom = -35.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start Over" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -10.0
margin_right = 75.0
margin_bottom = 10.0
text = "Start Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 35.0
margin_right = 75.0
margin_bottom = 55.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.5
margin_top = 50.0
margin_right = 24.5
margin_bottom = 14.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 70.0
margin_right = 50.0
margin_bottom = 16.0
max_value = 4.0
value = 4.0
tick_count = 5
ticks_on_borders = true
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Start Over" to="." method="_on_Start_Over_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
